# Infinity_Android

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/fonts/: alter_mono.afont
app/src/main/assets/shaders/: background.frag  background.vert  color.frag  color.vert  grid.frag  grid.vert  gui.frag  gui.vert  screen.frag  screen.vert  shape.frag  shape_render.frag  shape_render.vert  slime.frag  slime.vert  sprite.frag  sprite.vert  texture.frag  texture.vert
app/src/main/cpp/: CMakeLists.txt  camera.cpp  camera.h  core.cpp  core.h  ecs.cpp  ecs.h  gui.cpp  gui.h  input.cpp  input.h  levels.cpp  levels.h  logging.h  main.cpp  physics.cpp  physics.h  pnum.cpp  pnum.h  random.cpp  random.h  renderer.cpp  renderer.h  util.cpp  util.h  wrapper.cpp  wrapper.h
app/src/main/java/com/example/infinity/: MainActivity.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
